--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 <script type="text/javascript" src="script.js"></script>
 <title> DOG BROS! </title>
 <body>
+<div id="main">
 <center>
 <h1> DOG BROS! </title>
 <h3> good bois good vibes </h3>
 <h4> a day with a dog friend </h4>
 <h5> by annie and aby </h5>
-<a href="sscreen.html">START!</a>
+<a href="name.html">START!</a>
+</div>
 
 
 
