--- a/sscreen.html
+++ b/sscreen.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="style.css">
+<script type="text/javascript" src="script.js"></script>
 <body>
-testing
-
+<div id="selection">
+<center>
+<h1>HANG WITH...</h1>
+<br>
+<a href="pug.html"><img src="doug.png" height="300px" width="300px"></img></a>   <a href="doodle.html"><img src="samson.png" height="300px" width="300px"></img></a>   <a href="germanshep.html"><img src="loki.png" height="300px" width="300px"></img></a>
+</center>
+</div>
 </body>
 
 </head>
